applied format settings to projects
Change-Id: I9350b935eb637611e025b2991bafa9ccebf4f537
Reviewed-on: http://gerrit.esdi-community.eu/1385
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>